--- a/src/components/Headshot.css
+++ b/src/components/Headshot.css
@@ -6,6 +6,7 @@
 
 .headshot-container {
   overflow: hidden;
+  margin-bottom: 2em;
 }
 
 /* // Small devices (landscape phones, 576px and up) */
